# Job_Butler

./: .gitignore  AGENTS.md  Cargo.toml  readme.md  tmp_health_check.py  tmp_ws_check.py  tmp_ws_check2.py  tmp_ws_connect_only.py
apps/: AGENTS.md
apps/daemon/: AGENTS.md  Cargo.toml
apps/daemon/src/: main.rs
apps/tui/: AGENTS.md  Cargo.toml
apps/tui/src/: main.rs
configs/: AGENTS.md
crates/: AGENTS.md
crates/ai/: AGENTS.md
crates/api/: AGENTS.md  Cargo.toml
crates/api/src/: http.rs  lib.rs
crates/common/: AGENTS.md
crates/config/: AGENTS.md
crates/core/: AGENTS.md
crates/orchestrator/: AGENTS.md
crates/recruiter/: AGENTS.md
crates/resume/: AGENTS.md
crates/storage/: AGENTS.md  Cargo.toml
crates/storage/src/: db.rs  error.rs  lib.rs
crates/tools/: AGENTS.md
data/: AGENTS.md
docs/: AGENTS.md
logs/: AGENTS.md
migrations/: 0001_init.sql  AGENTS.md
prompts/: AGENTS.md  Next_step.txt
python/: AGENTS.md
python/OmniParser-master/: move.py  test.py
python/OmniParser-master/util/: utils.py
python/bridge/: AGENTS.md  main.py  test_api.py
python/planner/: AGENTS.md  __init__.py  main.py  requirements.txt  service.py
python/planner/test/: test.py
python/planner/test/OmniParser/: main.py  requirements.txt
python/planner/test/OmniParser/util/: utils.py
python/planner/tools/: __init__.py  common.py
python/planner/tools/OmniParser/: main.py
python/planner/tools/capture_screen/: __init__.py  tool.py
python/planner/tools/click_screen/: __init__.py  tool.py
python/planner/tools/detect_clickable_buttons/: __init__.py  tool.py
python/planner/tools/input_text/: __init__.py  tool.py
python/planner/tools/llm/: __init__.py  tool.py
python/planner/tools/scroll_wheel/: __init__.py  tool.py
python/vision/: AGENTS.md
start/back-end/: readme.md
start/front-end/: readme.md
test/: langgraph_code_assistant_mistral.ipynb  langgraph_code_assistant_mistral.py
