[workspace]
members = [
  "apps/daemon",
  "apps/tui",
  "crates/api",
  "crates/storage"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "fs"] }
