[package]
name = "job-agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
job-agent-api = { path = "../../crates/api" }
job-agent-storage = { path = "../../crates/storage" }

